--- a/app.wxss
+++ b/app.wxss
@@ -1,12 +1,16 @@
 /**app.wxss**/
 .container {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 17px;
+  padding: 36.2rpx 30.77rpx;
   box-sizing: border-box;
   background-color: #f8f8f8;
+  overflow: auto;
 } 
+page{
+  height: 100%;
+  background-color: #f8f8f8;
+}
