--- a/pages/myCoupon/myCoupon.wxml
+++ b/pages/myCoupon/myCoupon.wxml
@@ -4,11 +4,11 @@
       <text class='top-text {{item.active?"active":""}}'>{{item.mean}}</text>
     </view>
   </view>
-  <block>
+  <view class="mtx">
     <view class='coupon-box'>
       <view class='box-l'>
         <view class='l1'>老会员双十一预热专享优惠券</view>
-        <view class='l2'>代金券</view>
+        <view class='l2'><text class='type'>代金券</text><text class='couponId'>1509070490</text></view>
         <view class='l3'>50<text class='unit'>元</text></view>
         <view class='l4'>无使用门槛</view>
       </view>
@@ -17,7 +17,7 @@
         <view class='r2'>2018-10-25</view>
         <view class='r3'>至</view>
         <view class='r4'>2018-10-25</view>
-        <view class='r5' bindtap='receive'>立即领取</view>
+        <!-- <view class='r5' bindtap='receive'>立即领取</view> -->
       </view>
     </view>
     <view class='coupon-tips'>
@@ -27,12 +27,10 @@
       <view class='txt'>适用全品类产品</view>
       <view class='txt'>仅限累计消费满30000元的老会员领取</view>
     </view>
-  </block>
-  <block>
     <view class='coupon-box'>
       <view class='box-l'>
         <view class='l1'>老会员双十一预热专享优惠券</view>
-        <view class='l2'>代金券</view>
+        <view class='l2'><text class='type'>代金券</text><text class='couponId'>1509070490</text></view>
         <view class='l3'>50<text class='unit'>元</text></view>
         <view class='l4'>无使用门槛</view>
       </view>
@@ -41,7 +39,7 @@
         <view class='r2'>2018-10-25</view>
         <view class='r3'>至</view>
         <view class='r4'>2018-10-25</view>
-        <view class='r5' bindtap='receive'>立即领取</view>
+        <!-- <view class='r5' bindtap='receive'>立即领取</view> -->
       </view>
     </view>
     <view class='coupon-tips'>
@@ -51,5 +49,5 @@
       <view class='txt'>适用全品类产品</view>
       <view class='txt'>仅限累计消费满30000元的老会员领取</view>
     </view>
-  </block>
+  </view>
 </view>
