--- a/pages/myCoupon/myCoupon.wxss
+++ b/pages/myCoupon/myCoupon.wxss
@@ -14,7 +14,12 @@
   text-align: center;
   border: 1.81rpx solid rgba(255, 255, 255, 0);
   border-bottom: 1.81rpx solid rgba(187, 187, 187, 1);
-  margin-bottom: 30.77rpx;
+  /* margin-bottom: 30.77rpx; */
+  position: fixed;
+  z-index: 5;
+}
+.mtx{
+  margin-top: 121.27rpx;
 }
 .top-item{
   width: 33.33%;
@@ -56,7 +61,7 @@
 }
 .coupon-tips{
   width: 608.84rpx;
-  height: 231.68rpx;
+  /* height: 231.68rpx; */
   line-height: 36.2rpx;
   background-color: rgba(225, 244, 255, 1);
   color: rgba(7, 104, 159, 1);
@@ -82,6 +87,30 @@
   padding-top: 28.96rpx;
   padding-left: 19.91rpx;
 }
+.couponId{
+  width: 235.3rpx;
+  height: 36.2rpx;
+  line-height: 36.2rpx;
+  background-color: rgba(255, 255, 255, 0);
+  color: rgba(230, 88, 93, 1);
+  font-size: 25.34rpx;
+  text-align: left;
+  font-family: -apple-system;
+  border: 1.81rpx solid rgba(255, 255, 255, 0);
+  margin-left: 9.05rpx;
+}
+.type{
+  width: 60px;
+  height: 36.2rpx;
+  line-height: 36.2rpx;
+  background-color: rgba(255, 255, 255, 0);
+  color: rgba(255, 126, 103, 1);
+  font-size: 25.34rpx;
+  text-align: center;
+  font-family: -apple-system;
+  border: 1.81rpx solid rgba(255, 126, 103, 1);
+  display: inline-block;
+}
 .l1{
   width: 362rpx;
   height: 36.2rpx;
@@ -94,16 +123,11 @@
   white-space: nowrap;
 }
 .l2{
-  width: 60px;
+  width: 100%;
   height: 36.2rpx;
   line-height: 36.2rpx;
-  background-color: rgba(255, 255, 255, 0);
-  color: rgba(255, 126, 103, 1);
-  font-size: 25.34rpx;
-  text-align: center;
-  font-family: -apple-system;
-  border: 1.81rpx solid rgba(255, 126, 103, 1);
   margin-top: 12.67rpx;
+  display: flex;
 }
 .l3{
   height: 114.03rpx;
@@ -180,7 +204,7 @@
   height:141.18rpx;
   position:absolute;
   top:108.6rpx;
-  left:50.68rpx;
+  left:40.68rpx;
 }
 .grey.coupon-box{
   border: 1.81rpx solid rgba(185, 185, 185, 1);
