--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-  <image class='login-img' src="../static/images/logo.png"></image>
+  <image class='login-img' src="../../static/images/logo.png"></image>
   <view class='login-form'>
     <view class='input-box'>
       <input placeholder='手机号' class='phone'></input>
@@ -8,6 +8,6 @@
       <input placeholder='验证码' class='password'></input>
       <view class='code'>发送验证码</view>
     </view>
-    <view class='submit'>进 入</view>
+    <button bindtap='submit' class='submit'>进 入</button>
   </view>
 </view>
