--- a/pages/user/addressEdit/addressEdit.wxml
+++ b/pages/user/addressEdit/addressEdit.wxml
@@ -3,28 +3,28 @@
     <view class='ads-l'>所在省</view>
     <view class='ads-r'>
       <input class='ads-v' value='{{address.province}}'></input>
-      <image bindtap='clear' data-type="province" class='ads-img' src="../../static/images/clear.png"></image>
+      <image bindtap='clear' data-type="province" class='ads-img' src="../../../static/images/clear.png"></image>
     </view>
   </view>
   <view class='ads-edit'>
     <view class='ads-l'>所在市</view>
     <view class='ads-r'>
       <input class='ads-v' value='{{address.city}}'></input>
-      <image bindtap='clear' data-type="city" class='ads-img' src="../../static/images/clear.png"></image>
+      <image bindtap='clear' data-type="city" class='ads-img' src="../../../static/images/clear.png"></image>
     </view>
   </view>
   <view class='ads-edit'>
     <view class='ads-l'>所在区/县</view>
     <view class='ads-r'>
       <input class='ads-v' value='{{address.area}}'></input>
-      <image bindtap='clear' data-type="area" class='ads-img' src="../../static/images/clear.png"></image>
+      <image bindtap='clear' data-type="area" class='ads-img' src="../../../static/images/clear.png"></image>
     </view>
   </view>
   <view class='ads-edit'>
     <view class='ads-l'>详细地址</view>
     <view class='ads-r'>
       <textarea class='ads-detail' value="{{address.detail}}"></textarea>
-      <image bindtap='clear' data-type="detail" class='ads-img' src="../../static/images/clear.png"></image>
+      <image bindtap='clear' data-type="detail" class='ads-img' src="../../../static/images/clear.png"></image>
     </view>
   </view>
   <view class='ads-submit' bindtap='submit'>保 存</view>
