--- a/pages/user/unameEdit/unameEdit.wxml
+++ b/pages/user/unameEdit/unameEdit.wxml
@@ -2,7 +2,7 @@
 <view class='container'>
   <view class='uname-edit'>
     <input class='uname-value' value="{{username}}"></input>
-    <image bindtap='clearTxt' class='uname-img' src='../../static/images/clear.png'></image>
+    <image bindtap='clearTxt' class='uname-img' src='../../../static/images/clear.png'></image>
   </view>
   <view class='uname-submit' bindtap='submit'>保 存</view>
 </view>
