--- a/pages/user/userInfo.wxml
+++ b/pages/user/userInfo.wxml
@@ -2,27 +2,27 @@
   <view class='info-line'>
     <view class='info-l'>会员ID</view>
     <view class='info-r'>
-      <view class='info-value'>4638 6371 7382</view>
+      <view class='info-value'>{{userInfo.customerNum}}</view>
     </view>
   </view>
   <view class='info-line' bindtap='editUname'>
       <view class='info-l'>姓名</view>
       <view class='info-r'>
-        <view class='info-value'>张三化</view>
+        <view class='info-value'>{{userInfo.nickname}}</view>
         <image class='info-img' src='../../static/images/more.png'></image>
       </view>
   </view>
   <view class='info-line' bindtap='editPhone'>
     <view class='info-l'>手机</view>
     <view class='info-r'>
-      <view class='info-value'>18319773764</view>
+      <view class='info-value'>{{userInfo.phoneNumber}}</view>
       <image class='info-img' src='../../static/images/more.png'></image>
     </view>
   </view>
   <view class='info-line' bindtap='editGender'>
     <view class='info-l'>性别</view>
     <view class='info-r'>
-      <view class='info-value'>男</view>
+      <view class='info-value'>{{userInfo.sex||"男"}}</view>
       <image class='info-img' src='../../static/images/more.png'></image>
     </view>
   </view>
