--- a/pages/user/phoneEdit/phoneEdit.wxml
+++ b/pages/user/phoneEdit/phoneEdit.wxml
@@ -1,11 +1,13 @@
 <view class='container'>
-  <view class='phone-edit'>
-    <input class='phone-value' placeholder='请输入新手机号码'></input>
-  </view>
-  <view class='phone-edit'>
-    <input class='phone-value' placeholder='新手机验证码'></input>
-    <view class='code'>发送验证码</view>
-  </view>
-  <view class='phone-submit' bindtap='submit'>确 认</view>
-  <view class='phone-tips'>更改后，请以新手机号码作为识别和登录验证</view>
+  <form bindsubmit="formSubmit" class='form'>
+    <view class='phone-edit'>
+      <input name='phone' class='phone-value' bindinput='inputPhone' placeholder='请输入新手机号码'></input>
+    </view>
+    <view class='phone-edit'>
+      <input name='code' class='phone-value' placeholder='新手机验证码'></input>
+      <view bindtap="{{showCountdown?'':'getCode'}}" class='code'>{{showCountdown?(countdown+"秒"):"发送验证码"}}</view>
+    </view>
+    <button formType="submit" class='phone-submit'>确 认</button>
+    <view class='phone-tips'>更改后，请以新手机号码作为识别和登录验证</view>
+  </form>
 </view>
