--- a/pages/user/genderEdit/genderEdit.wxml
+++ b/pages/user/genderEdit/genderEdit.wxml
@@ -1,11 +1,11 @@
 <view class='container'>
-  <view class='gender-edit' bindtap='changeGender' data-gender="M">
+  <view class='gender-edit' bindtap='changeGender' data-gender="男">
     <view class='gender-value'>男</view>
-    <image wx:if="{{gender=='M'}}" class='gender-img' src="../../../static/images/select.png"></image>
+    <image wx:if="{{gender=='男'}}" class='gender-img' src="../../../static/images/select.png"></image>
   </view>
-  <view class='gender-edit' bindtap='changeGender' data-gender="F">
+  <view class='gender-edit' bindtap='changeGender' data-gender="女">
     <view class='gender-value'>女</view>
-    <image wx:if="{{gender=='F'}}" class='gender-img' src="../../../static/images/select.png"></image>
+    <image wx:if="{{gender=='女'}}" class='gender-img' src="../../../static/images/select.png"></image>
   </view>
   <view class='gender-submit' bindtap='submit'>保 存</view>
 </view>
