--- a/pages/order/orderList.wxml
+++ b/pages/order/orderList.wxml
@@ -8,7 +8,7 @@
     <view class='order-c'>
       <view class='line'>
         <text class='line-l'>订单号：</text>
-        <text class='line-r'>{{item.orderNum}}</text>
+        <text class='line-r'>{{item.orderExternalId}}</text>
       </view>
       <view class='line'>
         <text class='line-l'>商品名：</text>
@@ -20,7 +20,7 @@
       </view>
       <view class='line'>
         <text class='line-l'>合计件数：</text>
-        <text class='line-r'>{{item.num}} 件</text>
+        <text class='line-r'>{{item.orderNumber}} 件</text>
       </view>
       <view class='total'>实付款：{{item.orderAmount}}元</view>
     </view>
