--- a/pages/coupon/couponReceive.wxml
+++ b/pages/coupon/couponReceive.wxml
@@ -13,7 +13,8 @@
         <view class='r2'>2018-10-25</view>
         <view class='r3'>至</view>
         <view class='r4'>2018-10-25</view>
-        <view class='r5' bindtap='receive'>立即领取</view>
+        <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!userInfo}}" class='r5'>立即领取</button>
+        <view wx:else class='r5' bindtap='receive'>立即领取</view>
       </view>
     </view>
     <view class='coupon-tips'>
@@ -38,7 +39,8 @@
         <view class='r2'>自领取之日起</view>
         <view class='r3'><text class='orange'>第11天 生效</text></view>
         <view class='r4'>有效期 <text class='orange'>30</text> 天</view>
-        <view class='r5' bindtap='receive'>立即领取</view>
+        <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!userInfo}}" class='r5'>立即领取</button>
+        <view wx:else class='r5' bindtap='receive'>立即领取</view>
       </view>
     </view>
     <view class='coupon-tips'>
@@ -64,7 +66,8 @@
         <view class='r2'>2018-10-25</view>
         <view class='r3'>至</view>
         <view class='r4'>2018-10-25</view>
-        <view class='r5' bindtap='finished'>立即领取</view>
+        <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!userInfo}}" class='r5'>立即领取</button>
+        <view wx:else class='r5' bindtap='finished'>立即领取</view>
       </view>
     </view>
     <view class='coupon-tips grey'>
