--- a/pages/user/userInfo.wxml
+++ b/pages/user/userInfo.wxml
@@ -8,7 +8,7 @@
   <view class='info-line' bindtap='editUname'>
       <view class='info-l'>姓名</view>
       <view class='info-r'>
-        <view class='info-value'>{{userInfo.nickname}}</view>
+        <view class='info-value'>{{userInfo.name||"请输入"}}</view>
         <image class='info-img' src='../../static/images/more.png'></image>
       </view>
   </view>
@@ -22,7 +22,7 @@
   <view class='info-line' bindtap='editGender'>
     <view class='info-l'>性别</view>
     <view class='info-r'>
-      <view class='info-value'>{{userInfo.sex||"男"}}</view>
+      <view class='info-value'>{{userInfo.sex||"请选择"}}</view>
       <image class='info-img' src='../../static/images/more.png'></image>
     </view>
   </view>
@@ -30,7 +30,7 @@
     <view class='info-l'>生日</view>
     <view class='info-r'>
       <picker class='picker' mode="multiSelector" bindchange="bindMultiPickerChange" bindcolumnchange="bindMultiPickerColumnChange" value="{{multiIndex}}" range="{{multiArray}}">
-        <view class='info-value'>{{time}}</view>
+        <view class='info-value'>{{time||"请选择"}}</view>
       </picker>
       <image class='info-img' src='../../static/images/more.png'></image>
     </view>
