--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -48,7 +48,7 @@
       <view class="line-l"></view>
       <view class='df'>
         <view class="line-c">我的优惠券</view>
-        <view class="service-bubble">1</view>
+        <view wx:if="{{userInfo}}" class="service-bubble">1</view>
       </view>
       <image src='../../static/images/more.png' class="line-img"></image>
     </button>
