--- a/pages/order/orderList.wxml
+++ b/pages/order/orderList.wxml
@@ -29,5 +29,5 @@
       <view class='{{recordTime || recordTime==""?"toComment":"hasComment"}}' bindtap='toComent' data-type="{{false}}" data-item="{{item}}">去评价</view>
     </view>
   </view>
-  <view wx:if="{{!canload}}" class='loading'>{{canload?'':'没有更多了...'}}</view>
+  <view wx:if="{{!canload && orderData.length}}" class='loading'>{{canload?'':'没有更多了...'}}</view>
 </view>
